# viewpointdiversity

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/scripts/: README.md  config.ini.example  evaluate_k_and_ms.py  generate_feature_pickles.py  pickle_migrator.py  pickle_migrator_test.py  test_topic_feature_generation.py  train_and_evaluate_models.py  trains_and_evaluate_models.py  trains_and_evaluate_models_v2.py
src/viewpointdiversity/: CollectXTokens.py  ExtractContents.py  FindCharacteristicKeywords.py  ParsedDocumentsFourForums.py  SentimentFeatureGenerator.py  TermContext.py  TrackSentiment.py  TrackTrailingContext.py  Word2VecFeatureGenerator.py  __init__.py  feature_vector_creation_utilities.py  model_evaluation_utilities.py
src/viewpointdiversitydetection/: BertFeatureGenerator.py  CollectXTokens.py  (+23 more)
test/: feature_vector_creation_utilities_test.py  feature_vectors_and_targets_test.py  find_characteristic_keywords.py  parsed_documents_four_forums_test.py  raw_corpus_for_forums_test.py  test_bert_feature_generator.py  test_compare_documents.py  test_extract_contexts.py  test_feature_vectors_and_targets.py  test_feature_vectors_and_targets_holder.py  test_find_characteristic_keywords.py  test_model_evaluation_utilities.py  test_noun_token_filter.py  test_parsed_documents_commoncrawl.py  test_parsed_documents_four_forums.py  test_raw_corpus_for_forums.py  test_sbert_feature_generator.py  test_select_related_keywords.py  test_token_filter.py  test_topic_feature_generator.py  top_and_bottom_metric_test.py  word2vec_feature_generator_test.py
(+1 files in other folders)
