[metadata]
name = viewpointdiversitydetection
version = 0.0.1
author = Jeff Harwell
author_email = jeff.harwell@gmail.com
description = An Implementation of the Viewpoint Diversity Detection Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/jeffharwell/viewpointdiversitydetection"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src